--- a/examenLab5P2_JoseAcosta/nbproject/project.properties
+++ b/examenLab5P2_JoseAcosta/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=examenLab5P2_JoseAcosta
-main.class=examenlab5p2_joseacosta.ExamenLab5P2_JoseAcosta
+main.class=examenlab5p2_joseacosta.InicioSesion
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
